--- a/scss/dl-mixins.scss
+++ b/scss/dl-mixins.scss
@@ -89,3 +89,8 @@ $sidebar-bg: 20em, #f4f4f4, absolute, 0, 0, 0;
 	@else if $size == large {font-size: 1.5em;}
 	@else if $size == medium {font-size: 1.3em;}
 }
+
+@mixin primary-heading() {
+	font: 16px/1 arial;
+	text-decoration: underline;
+}
