--- a/scss/dl-styles.scss
+++ b/scss/dl-styles.scss
@@ -11,3 +11,15 @@ $theme-sidebar-bg: #f4f4f4;
 $primary-button-background-hover: #1f687a;
 $primary-button-colour: #fff;
 $link-button-colour: #0979C6;
+
+$margin-bottom-xs: .3em;
+$margin-bottom-s: .5em;
+$margin-bottom-m: .7em;
+$margin-bottom-l: 1em;
+$margin-bottom-xl: 1.3em;
+
+$margin-top-xs: $margin-bottom-xs;
+$margin-top-s: $margin-bottom-s;
+$margin-top-m: $margin-bottom-m;
+$margin-top-l: $margin-bottom-l;
+$margin-top-xl: $margin-bottom-xl;
