--- a/scss/dl-mixins.scss
+++ b/scss/dl-mixins.scss
@@ -13,33 +13,33 @@
 	}
 }
 
-$grid-theme: grid, auto auto, auto, "header" "main";
-$grid-search-main: grid, auto, 20em auto, "sidebar" "content";
-$grid-item-main: grid, auto, auto 20em, "content" "sidebar";
-
-$grid-child-row: auto;
-$grid-child-column-search-content: 2 / span 1; 
-$grid-child-column-search-sidebar: 1 / span 1; 
-$grid-child-column-item-content: 1 / span 1;
-$grid-child-column-item-sidebar: 2 / span 1;
- 
-@mixin grid($grid, $rows, $columns, $area) {
-	display: $grid; 
-	grid-template-rows: $rows;
-	grid-template-columns: $columns;
-	grid-template-areas: $area;
-}
-
 @mixin flexcontainer($display, $direction) {
 	display: $display;
 	flex-flow: $direction;
 }
-@mixin flexchild($values) {
+@mixin flexitem($values) {
   -webkit-box-flex: $values;
   -moz-box-flex:  $values;
   -webkit-flex:  $values;
   -ms-flex:  $values;
   flex:  $values;
+}
+
+@mixin bp($device) {
+
+	$bp-mobile: "(max-width: 480px)";
+	$bp-tablet: "(max-width: 768px)";
+	
+	@if $device == mobile {
+		@media #{$bp-mobile} {
+			@content;
+		}
+	}
+	@else if $device == tablet {
+		@media #{$bp-tablet} {
+			@content;
+		}
+	} 
 }
 
 $primary-button: 3px, none, none, 3px 30px 3px 30px, 0px 1px 3px #666;
@@ -59,38 +59,28 @@ $link-button: none, none, none, none;
 	background: $background;
 }
 
-$sidebar: sidebar, $grid-child-row, $theme-padding, $theme-sidebar-bg, relative, 10;
-@mixin sidebar($area, $rows, $padding, $colour, $pos, $z) {
-	grid-area: $area;
-	grid-row: $rows;
+$field-styles: 25px, 2px, 1px solid #ccc;
+@mixin fieldstyle($height, $border-radius, $border) {
+	height: $height;
+	border-radius: $border-radius;
+	border: $border;
+}
+
+$sidebar: calc(100vh - 7%), $theme-padding, $theme-sidebar-bg, 296px;
+@mixin sidebar($height, $padding, $colour, $min-width) {
+	height: $height;
 	padding: $padding;
 	background: $colour;
-	position: $pos;
-	z-index: $z;
+	min-width: $min-width;
 }
 
-$sidebar-bg: 20em, #f4f4f4, absolute, 0, 0, 0;
-@mixin sidebarbg($width, $bg, $pos, $z, $top, $bottom) {
-	width: $width;
-	background: $bg;
-	position: $pos;
-	z-index: $z;
-	top: $top;
-	bottom: $bottom;
-}
-
-@mixin titleweight($weight) {
+@mixin fontweight($weight) {
 	@if $weight == bold {font-weight: 600;}
 	@else if $weight == light {font-weight: 100;}	
 }
 
-@mixin titlesize($size) {
+@mixin fontsize($size) {
 	@if $size == xlarge {font-size: 1.8em;}
 	@else if $size == large {font-size: 1.5em;}
 	@else if $size == medium {font-size: 1.3em;}
-}
-
-@mixin primary-heading() {
-	font: 16px/1 arial;
-	text-decoration: underline;
 }
